2019-05-25  Akira Kakuto  <kakuto@w32tex.org>

	Import harfbuzz-2.5.0.
	* version.ac, configure.ac, Makefile.am: Adjusted.

2019-05-03  Akira Kakuto  <kakuto@w32tex.org>

	Import harfbuzz-2.4.0.
	* version.ac: Adjusted.

2019-01-31  Akira Kakuto  <kakuto@w32tex.org>

	Import harfbuzz-2.3.1.
	* version.ac, Makefile.am: Adjusted.

2018-12-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-2.3.0.
	* version.ac, Makefile.am, include/Makefile.am: Adjusted.

2018-11-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-2.2.0.
	* version.ac, include/Makefile.am: Adjusted.

2018-11-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-2.1.3.
	* version.ac, Makefile.am: Adjusted.

2018-11-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-2.1.1.
	* version.ac: Adjusted.

2018-10-31  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-2.1.0.
	* version.ac, Makefile.am, include/Makefile.am: Adjusted.

2018-10-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-2.0.2.
	* version.ac: Adjusted.

2018-10-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-2.0.1.
	* version.ac: Adjusted.

2018-10-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-2.0.0.
	* version.ac, Makefile.am, include/Makefile.am: Adjusted.

2018-10-20  Khaled Hosny  <khaledhosny@eglug.org>

	* configure.ac: Set HAVE_ICU_BUILTIN.

2018-09-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.9.0.
	* version.ac, Makefile.am: Adjusted.

2018-08-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.8.8.
	* version.ac: Adjusted.

2018-08-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.8.7.
	* version.ac: Adjusted.

2018-08-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.8.6.
	* version.ac, Makefile.am: Adjusted.

2018-08-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.8.5.
	* version.ac, Makefile.am: Adjusted.

2018-07-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
