@@ -27,7 +27,7 @@ SUBDIRS = . include
 noinst_LIBRARIES = libharfbuzz.a
 
 ## common
-AM_CPPFLAGS = -DHB_NO_MT -DHB_NO_UNICODE_FUNCS -DHAVE_FALLBACK=1 \
+AM_CPPFLAGS = -DHB_NO_MT -DHAVE_FALLBACK=1 \
 	-I$(top_srcdir)/$(HARFBUZZ_SRC)
 libharfbuzz_dependencies =
 libharfbuzz_a_SOURCES =  \
@@ -203,11 +203,6 @@ libharfbuzz_a_SOURCES += \
 	@HARFBUZZ_TREE@/src/hb-ot-shape-complex-myanmar-machine.hh \
 	@HARFBUZZ_TREE@/src/hb-ot-shape-complex-use-machine.hh
 
-## ICU library
-AM_CPPFLAGS += $(ICU_INCLUDES)
-libharfbuzz_dependencies += $(ICU_DEPEND)
-libharfbuzz_a_SOURCES += @HARFBUZZ_TREE@/src/hb-icu.cc
-
 ## Graphite library
 AM_CPPFLAGS += $(GRAPHITE2_INCLUDES)
 libharfbuzz_dependencies += $(GRAPHITE2_DEPEND)
@@ -227,12 +222,10 @@ hbtest_SOURCES = hbtest.c
 # Force Automake to use CXXLD for linking
 nodist_EXTRA_hbtest_SOURCES = dummy.cxx
 
-hbtest_CPPFLAGS = -Iinclude $(ICU_INCLUDES) $(GRAPHITE2_INCLUDES)
+hbtest_CPPFLAGS = -Iinclude $(GRAPHITE2_INCLUDES)
 
-LDADD = libharfbuzz.a $(ICU_LIBS) $(ICU_LIBS_EXTRA) $(GRAPHITE2_LIBS)
+LDADD = libharfbuzz.a $(GRAPHITE2_LIBS)
 
-## Rebuild libsicuxxx
-@ICU_RULE@
 ## Rebuild libgraphite2
 @GRAPHITE2_RULE@
 
