@@ -34,7 +34,6 @@ AX_CXX_COMPILE_STDCXX([11],,[optional])
 KPSE_COMPILER_VISIBILITY
 
 KPSE_GRAPHITE2_FLAGS
-KPSE_ICU_FLAGS
 
 # Functions and headers
 AC_CHECK_FUNCS(atexit mprotect sysconf getpagesize mmap isatty newlocale strtod_l posix_memalign)
@@ -84,8 +83,6 @@ fi
 
 if :; then
   AC_DEFINE([HAVE_OT], 1, [Use native OpenType Layout backend])
-  AC_DEFINE([HAVE_ICU], 1, [Use ICU library])
-  AC_DEFINE([HAVE_ICU_BUILTIN], 1, [ICU support is not a seperate library])
   AC_DEFINE([HAVE_GRAPHITE2], 1, [Use Graphite library])
 else
 dnl add all these to config.h.in but do not define them in config.h
