@@ -1,3 +1,10 @@
+2019-05-30  Khaled Hosny  <dr.khaled.hosny@gmail.com>
+
+	* Makefile.am: Fix missing Unicode functions with
+	HarfBuzz 2.5.0. Drop ICU dependency.
+	* aclocal.m4, configure.ac, hbtest.c, include/Makefile.am:
+	Drop ICU dependency.
+
 2019-05-25  Akira Kakuto  <kakuto@w32tex.org>
 
 	Import harfbuzz-2.5.0.
